# VM5

./: README.md  напоследок.txt
doc/: vm class.puml  vm command class.puml
doc/doxygen/: Doxyfile  main page.lnk
doc/doxygen/html/: _arithmetic_8cpp.html  _arithmetic_8cpp__incl.map  _arithmetic_8cpp__incl.md5  _arithmetic_8h.html  _arithmetic_8h__dep__incl.map  _arithmetic_8h__dep__incl.md5  _arithmetic_8h__incl.map  _arithmetic_8h__incl.md5  _arithmetic_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_p_u_8cpp.html  _c_p_u_8cpp__incl.map  _c_p_u_8cpp__incl.md5  _c_p_u_8h.html  _c_p_u_8h__dep__incl.map  _c_p_u_8h__dep__incl.md5  _c_p_u_8h__incl.map  _c_p_u_8h__incl.md5  _c_p_u_8h_source.html  _command_8h.html  _command_8h__dep__incl.map  _command_8h__dep__incl.md5  _command_8h__incl.map  _command_8h__incl.md5  _command_8h_source.html  _compare_8cpp.html  _compare_8cpp__incl.map  _compare_8cpp__incl.md5  _compare_8h.html  _compare_8h__dep__incl.map  _compare_8h__dep__incl.md5  _compare_8h__incl.map  _compare_8h__incl.md5  _compare_8h_source.html  _i_o_8cpp.html  _i_o_8cpp__incl.map  _i_o_8cpp__incl.md5  _i_o_8h.html  _i_o_8h__dep__incl.map  (+458 more)
doc/doxygen/html/search/: all_0.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+56 more)
src/: CMakeLists.txt  CPU.cpp  CPU.h  Memory.h  Preprocessor.cpp  Preprocessor.h  common.h  main.cpp
src/commands/: Arithmetic.cpp  Arithmetic.h  Command.h  Compare.cpp  Compare.h  IO.cpp  IO.h  Jump.cpp  Jump.h  Move.cpp  Move.h  Stop.h
